--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
     <meta charset="utf-8" />
     <title>Page Title</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Hi</h1>
+    <div class="container">
+        <div class="nav-wrapper">
+            <div class="left-side">
+                <div class="nav-link-wrapper">
+                    <a href="index.html">Home</a>
+                </div>
+                
+                <div class="nav-link-wrapper">
+                    <a href="about.html">About</a>
+                </div>
+            </div>
+
+            <div class="right-side">
+                <div class="brand">
+                    <div>Leo Matak</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 
