--- a/index.html
+++ b/index.html
@@ -27,6 +27,59 @@
             </div>
         </div>
 
+        <div class="content-wrapper">
+            <div class="portfolio-items-wrapper">
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images_logos/portfolio1.jpg)">
+                    </div>
+
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images_logos/logos/quip.png"> 
+                        </div>
+
+                        <div class="subtitle">
+                            Let's see how this looks like
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(Images/fig1.png)">
+                    </div>
+
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images_logos/logos/open-devos.png"> 
+                        </div>
+
+                        <div class="subtitle">
+                            Let's see how this looks like
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(images_logos/portfolio3.jpg)">
+                    </div>
+
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images_logos/logos/ministry-safe.png"> 
+                        </div>
+
+                        <div class="subtitle">
+                            Let's see how this looks like
+                        </div>
+                    </div>
+                </div>
+
+                
+
+            </div>
+        </div>
+
     </div>
 
 </body>
