--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </div>
     
                             <div class="subtitle">
-                                Important highights from some of the classes
+                                Important highightss from some of the classes
                             </div>
                         </div>
 
