add new profile

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
-                    <img src="Images/profile_pic.jpg" alt="">
+                    <img src="Images/profile_pic.jpeg" alt="">
                 </div>
 
                 <div class="profile-content-wrapper">
