--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="past_research">
                 <div class="past_research-items-wrapper">
                     <div class="past_research-item-wrap">
-                        <div class="past_research-img-background" style="background-image:url(Images/hurr_animation.gif)" loop=infinite>
+                        <div class="past_research-img-background" style="background-image:url(Images/DENVER_anim_fig_3_3.png)" loop=infinite>
                         </div>
     
                         <div class="past-research-img-text-wrapper">
