added about me pic

--- a/about.html
+++ b/about.html
@@ -29,7 +29,16 @@
             </div>
         </div>
 
+        
+
         <div class="content-wrapper">
+
+            <div class="big-pic">
+                <div class="big-pic-wrapper">
+                    <img src="Images/IMG_9060.jpg" alt="">
+                </div>
+                
+            </div>
 
             <div class="two-column-wrapper">
                 <div class="profile-image-wrapper">
