--- a/current_research.html
+++ b/current_research.html
@@ -35,7 +35,7 @@
 
             <div class="big-pic">
                 <div class="big-pic-wrapper">
-                    <img src="Images/leo_on_rocks.jpg" alt="">
+                    <img src="Images/curr_research.png" alt="">
                 </div>
                 
             </div>
