--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                         <div class="img-text-wrapper">
                             <div class="title">
-                                Houston, TX
+                                <a href="current_research.html">Houston, TX</a> 
                                 <br>
                                 
                                 <!-- <img src="overlayed_text/current_research.png">  -->
