--- a/current_research.html
+++ b/current_research.html
@@ -17,7 +17,7 @@
                     <a href="index.html">Home</a>
                 </div>
                 
-                <div class="nav-link-wrapper active-nav-link">
+                <div class="nav-link-wrapper">
                     <a href="about.html">About</a>
                 </div>
             </div>
@@ -33,8 +33,8 @@
 
         <div class="content-wrapper">
 
-            <div class="big-pic">
-                <div class="big-pic-wrapper">
+            <div class="Houston-big-pic">
+                <div class="Housotn-big-pic-wrapper">
                     <img src="Images/curr_research.png" alt="">
                 </div>
                 
