--- a/current_research.html
+++ b/current_research.html
@@ -58,8 +58,17 @@
                     <h1>    
                         Atmospheric research in urban environment
                     </h1>
-                    <h2>    
-                        This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!This is some text about my current research!
+                    <h2>  
+                        Accurate forecasting of meteorological variables in a densly populated 
+                        area such as city of Houston presents a major challenge. Especially when
+                        such an area consists of widely spread out smaller buildings, with a 
+                        tightly packed downtowon consisting mosly of skyscrappers.
+                        <br>
+                        <br>
+                        If we then want to further improve our forecasting skill, we shoulda
+                        also include the chemical reactions happening within the atmosphere.
+                        As such, for the current research we want to try and improve the 
+                        tracers and gases forecasting ability of the WRF-CHEM model.
                     </h2>   
                 </p>
             </div>
