many new chanes

--- a/surface_roughness.html
+++ b/surface_roughness.html
@@ -35,7 +35,7 @@
 
             <div class="Houston-big-pic">
                 <div class="Housotn-big-pic-wrapper">
-                    <img src="Images/hurricane_tracks.png" alt="">
+                    <img src="Images/CLZ_katrina.png" alt="">
                 </div>
                 
             </div>
@@ -56,31 +56,33 @@
             <div class="atmospheric-research-wrapper">
                 <p> 
                     <h1>    
-                        Impacts of Vertical Diffusion in Hurricanes
+                        Impacts of Momentum Roughness Length on Hurricane Development
                     </h1>
                     <h2>  
                         <br>
                         <br>
-                        Rotation in hurricane flows can significantly impact the dynamics and 
-                        structure of the turbulent boundary layer. Despite this unique feature 
-                        of hurricane boundary layers, the current planetary boundary layer (PBL) 
-                        schemes in weather models are neither designed nor comprehensively tested
-                         for intensifying hurricane flows
+                        The momentum roughness length (z0) significantly impacts wind predictions 
+                        in weather and climate models. Nevertheless, the impacts of z0 parameterizations
+                         in different wind regimes and various model configurations on the hurricane size,
+                          intensity, and track simulations have not been thoroughly established.
                         <br>
                         <br>
-                        The objective of this paper is to bridge this knowledge gap by 
-                        characterizing the role of vertical diffusion depth and magnitude 
-                        in simulated hurricane intensity, size, and track. To this end, 
-                        five major hurricane cases undergoing an intensification period are
-                        simulated using two widely used local and non-local PBL schemes in 
-                        Weather Research and Forecasting (WRF) model. In total, eighty WRF 
-                        simulations are conducted by varying the grid resolution, PBL scheme, 
-                        eddy diffusivity depth and magnitude, and PBL height. By decreasing the 
-                        existing vertical diffusion depth and magnitude, on average, ~38% and ~24% 
-                        improvements in hurricane intensity forecasts were obtained compared to the 
-                        default models. Hence, the results indicate that the current PBL schemes in 
-                        WRF are overly diffusive for simulating major hurricanes since they do not
-                         account for turbulence suppression effects in rotating hurricane flows
+                        To bridge this knowledge gap, a comprehensive analysis of 310 
+                        simulations of 10 real hurricanes using the Weather Research 
+                        and Forecasting (WRF) model is conducted in comparison with observations. 
+                        Our results show that the default z0 parameterizations in WRF perform well 
+                        for weak (category 1-2) hurricanes; however, they underestimate the intensities 
+                        of strong (category 3-5) hurricanes. This finding is independent of model 
+                        resolution or boundary layer schemes.
+
+                        The default values of z0 in WRF agree with the observational estimates
+                         from dropsonde data in weak hurricanes while they are much larger than 
+                         observations in strong hurricanes regime. Decreasing z0 close to the
+                          values of observational estimates and theoretical hurricane intensity
+                           models in high wind regimes (≳ 45 m s-1) led to significant improvements
+                            in the intensity forecasts of strong hurricanes. A momentum budget analysis
+                             dynamically explained why the reduction of z0 (decreased surface turbulent s
+                             tresses) leads to stronger simulated storms. 
                     </h2>   
                 </p>
             </div>
