--- a/current_research.html
+++ b/current_research.html
@@ -29,6 +29,9 @@
                 <div class="nav-link-wrapper">
                     <a href="about.html">About</a>
                 </div>
+                <div class="nav-link-wrapper active-nav-link">
+                    <a>Current Research</a>
+                </div>
             </div>
 
             <div class="right-side">
