--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                     <br>
                     <br>
                      
-                    -> interested in computational fluid mechanics, hurricane boundary layers and turbulence.
+                    -> interested in computational fluid mechanics, atmospheric boundary layers and turbulence.
 
                     <br>
                     <br>
