added scholar icon

--- a/about.html
+++ b/about.html
@@ -85,6 +85,7 @@
                     <div class="media">
                         <a href="https://www.linkedin.com/in/leo-matak-075778201/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
                         <a href="https://github.com/matakleo" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                        <a href="https://scholar.google.com/citations?user=F5xEUtsAAAAJ&hl=en" target="_blank"><ion-icon name="library"></ion-icon></a>
                         <a href="https://www.facebook.com/michael.westen21/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
                         
                         
